// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/team_channel_settings/channel/ChannelList should match snapshot 1`] = `
<div
  className="ChannelsList"
>
  <DataGrid
    columns={
      Array [
        Object {
          "field": "name",
          "fixed": true,
          "name": <FormattedMessage
            defaultMessage="Name"
            id="admin.channel_settings.channel_list.nameHeader"
            values={Object {}}
          />,
          "width": 4,
        },
        Object {
          "field": "team",
          "fixed": true,
          "name": <FormattedMessage
            defaultMessage="Team"
            id="admin.channel_settings.channel_list.teamHeader"
            values={Object {}}
          />,
          "width": 1.5,
        },
        Object {
          "field": "management",
          "fixed": true,
          "name": <FormattedMessage
            defaultMessage="Management"
            id="admin.channel_settings.channel_list.managementHeader"
            values={Object {}}
          />,
        },
        Object {
          "field": "edit",
          "fixed": true,
          "name": "",
          "textAlign": "right",
        },
      ]
    }
    endCount={1}
    filterProps={
      Object {
        "keys": Array [
          "teams",
          "channels",
          "management",
        ],
        "onFilter": [Function],
        "options": Object {
          "channels": Object {
            "keys": Array [
              "public",
              "private",
              "deleted",
            ],
            "name": "Channels",
            "values": Object {
              "deleted": Object {
                "name": <FormattedMessage
                  defaultMessage="Archived"
                  id="admin.channel_list.archived"
                  values={Object {}}
                />,
                "value": false,
              },
              "private": Object {
                "name": <FormattedMessage
                  defaultMessage="Private"
                  id="admin.channel_list.private"
                  values={Object {}}
                />,
                "value": false,
              },
              "public": Object {
                "name": <FormattedMessage
                  defaultMessage="Public"
                  id="admin.channel_list.public"
                  values={Object {}}
                />,
                "value": false,
              },
            },
          },
          "management": Object {
            "keys": Array [
              "group_constrained",
              "exclude_group_constrained",
            ],
            "name": "Management",
            "values": Object {
              "exclude_group_constrained": Object {
                "name": <FormattedMessage
                  defaultMessage="Manual Invites"
                  id="admin.channel_list.manual_invites"
                  values={Object {}}
                />,
                "value": false,
              },
              "group_constrained": Object {
                "name": <FormattedMessage
                  defaultMessage="Group Sync"
                  id="admin.channel_list.group_sync"
                  values={Object {}}
                />,
                "value": false,
              },
            },
          },
          "teams": Object {
            "keys": Array [
              "team_ids",
            ],
            "name": "Teams",
            "type": Object {
              "$$typeof": Symbol(react.memo),
              "WrappedComponent": [Function],
              "compare": null,
              "displayName": "Connect(TeamFilterDropdown)",
              "type": [Function],
            },
            "values": Object {
              "team_ids": Object {
                "name": <FormattedMessage
                  defaultMessage="Teams"
                  id="admin.team_settings.title"
                  values={Object {}}
                />,
                "value": Array [],
              },
            },
          },
        },
      }
    }
    loading={false}
    nextPage={[Function]}
    page={0}
    placeholderEmpty={
      <FormattedMessage
        defaultMessage="No channels found"
        id="admin.channel_settings.channel_list.no_channels_found"
        values={Object {}}
      />
    }
    previousPage={[Function]}
    rows={
      Array [
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editRow"
              data-testid="DNedit"
            >
              <Link
                to="/admin_console/user_management/channels/123"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.channel_settings.channel_row.configure"
                  values={Object {}}
                />
              </Link>
            </span>,
            "id": "123",
            "management": <span
              className="group-description adjusted row-content"
            >
              <FormattedMessage
                defaultMessage="Manual Invites"
                id="admin.channel_settings.channel_row.managementMethod.manual"
                values={Object {}}
              />
            </span>,
            "name": <span
              className="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <GlobeIcon
                className="channel-icon"
              />
              <span
                className="TeamList_channelDisplayName"
              >
                DN
              </span>
            </span>,
            "team": <span
              className="group-description row-content"
            >
              teamDisplayName
            </span>,
          },
          "onClick": [Function],
        },
      ]
    }
    rowsContainerStyles={
      Object {
        "minHeight": "40px",
      }
    }
    search={[Function]}
    startCount={1}
    term=""
    total={1}
  />
</div>
`;

exports[`admin_console/team_channel_settings/channel/ChannelList should match snapshot with paging 1`] = `
<div
  className="ChannelsList"
>
  <DataGrid
    columns={
      Array [
        Object {
          "field": "name",
          "fixed": true,
          "name": <FormattedMessage
            defaultMessage="Name"
            id="admin.channel_settings.channel_list.nameHeader"
            values={Object {}}
          />,
          "width": 4,
        },
        Object {
          "field": "team",
          "fixed": true,
          "name": <FormattedMessage
            defaultMessage="Team"
            id="admin.channel_settings.channel_list.teamHeader"
            values={Object {}}
          />,
          "width": 1.5,
        },
        Object {
          "field": "management",
          "fixed": true,
          "name": <FormattedMessage
            defaultMessage="Management"
            id="admin.channel_settings.channel_list.managementHeader"
            values={Object {}}
          />,
        },
        Object {
          "field": "edit",
          "fixed": true,
          "name": "",
          "textAlign": "right",
        },
      ]
    }
    endCount={10}
    filterProps={
      Object {
        "keys": Array [
          "teams",
          "channels",
          "management",
        ],
        "onFilter": [Function],
        "options": Object {
          "channels": Object {
            "keys": Array [
              "public",
              "private",
              "deleted",
            ],
            "name": "Channels",
            "values": Object {
              "deleted": Object {
                "name": <FormattedMessage
                  defaultMessage="Archived"
                  id="admin.channel_list.archived"
                  values={Object {}}
                />,
                "value": false,
              },
              "private": Object {
                "name": <FormattedMessage
                  defaultMessage="Private"
                  id="admin.channel_list.private"
                  values={Object {}}
                />,
                "value": false,
              },
              "public": Object {
                "name": <FormattedMessage
                  defaultMessage="Public"
                  id="admin.channel_list.public"
                  values={Object {}}
                />,
                "value": false,
              },
            },
          },
          "management": Object {
            "keys": Array [
              "group_constrained",
              "exclude_group_constrained",
            ],
            "name": "Management",
            "values": Object {
              "exclude_group_constrained": Object {
                "name": <FormattedMessage
                  defaultMessage="Manual Invites"
                  id="admin.channel_list.manual_invites"
                  values={Object {}}
                />,
                "value": false,
              },
              "group_constrained": Object {
                "name": <FormattedMessage
                  defaultMessage="Group Sync"
                  id="admin.channel_list.group_sync"
                  values={Object {}}
                />,
                "value": false,
              },
            },
          },
          "teams": Object {
            "keys": Array [
              "team_ids",
            ],
            "name": "Teams",
            "type": Object {
              "$$typeof": Symbol(react.memo),
              "WrappedComponent": [Function],
              "compare": null,
              "displayName": "Connect(TeamFilterDropdown)",
              "type": [Function],
            },
            "values": Object {
              "team_ids": Object {
                "name": <FormattedMessage
                  defaultMessage="Teams"
                  id="admin.team_settings.title"
                  values={Object {}}
                />,
                "value": Array [],
              },
            },
          },
        },
      }
    }
    loading={false}
    nextPage={[Function]}
    page={0}
    placeholderEmpty={
      <FormattedMessage
        defaultMessage="No channels found"
        id="admin.channel_settings.channel_list.no_channels_found"
        values={Object {}}
      />
    }
    previousPage={[Function]}
    rows={
      Array [
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editRow"
              data-testid="DN0edit"
            >
              <Link
                to="/admin_console/user_management/channels/id0"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.channel_settings.channel_row.configure"
                  values={Object {}}
                />
              </Link>
            </span>,
            "id": "id0",
            "management": <span
              className="group-description adjusted row-content"
            >
              <FormattedMessage
                defaultMessage="Manual Invites"
                id="admin.channel_settings.channel_row.managementMethod.manual"
                values={Object {}}
              />
            </span>,
            "name": <span
              className="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <GlobeIcon
                className="channel-icon"
              />
              <span
                className="TeamList_channelDisplayName"
              >
                DN0
              </span>
            </span>,
            "team": <span
              className="group-description row-content"
            >
              teamDisplayName
            </span>,
          },
          "onClick": [Function],
        },
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editRow"
              data-testid="DN1edit"
            >
              <Link
                to="/admin_console/user_management/channels/id1"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.channel_settings.channel_row.configure"
                  values={Object {}}
                />
              </Link>
            </span>,
            "id": "id1",
            "management": <span
              className="group-description adjusted row-content"
            >
              <FormattedMessage
                defaultMessage="Manual Invites"
                id="admin.channel_settings.channel_row.managementMethod.manual"
                values={Object {}}
              />
            </span>,
            "name": <span
              className="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <GlobeIcon
                className="channel-icon"
              />
              <span
                className="TeamList_channelDisplayName"
              >
                DN1
              </span>
            </span>,
            "team": <span
              className="group-description row-content"
            >
              teamDisplayName
            </span>,
          },
          "onClick": [Function],
        },
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editRow"
              data-testid="DN2edit"
            >
              <Link
                to="/admin_console/user_management/channels/id2"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.channel_settings.channel_row.configure"
                  values={Object {}}
                />
              </Link>
            </span>,
            "id": "id2",
            "management": <span
              className="group-description adjusted row-content"
            >
              <FormattedMessage
                defaultMessage="Manual Invites"
                id="admin.channel_settings.channel_row.managementMethod.manual"
                values={Object {}}
              />
            </span>,
            "name": <span
              className="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <GlobeIcon
                className="channel-icon"
              />
              <span
                className="TeamList_channelDisplayName"
              >
                DN2
              </span>
            </span>,
            "team": <span
              className="group-description row-content"
            >
              teamDisplayName
            </span>,
          },
          "onClick": [Function],
        },
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editRow"
              data-testid="DN3edit"
            >
              <Link
                to="/admin_console/user_management/channels/id3"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.channel_settings.channel_row.configure"
                  values={Object {}}
                />
              </Link>
            </span>,
            "id": "id3",
            "management": <span
              className="group-description adjusted row-content"
            >
              <FormattedMessage
                defaultMessage="Manual Invites"
                id="admin.channel_settings.channel_row.managementMethod.manual"
                values={Object {}}
              />
            </span>,
            "name": <span
              className="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <GlobeIcon
                className="channel-icon"
              />
              <span
                className="TeamList_channelDisplayName"
              >
                DN3
              </span>
            </span>,
            "team": <span
              className="group-description row-content"
            >
              teamDisplayName
            </span>,
          },
          "onClick": [Function],
        },
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editRow"
              data-testid="DN4edit"
            >
              <Link
                to="/admin_console/user_management/channels/id4"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.channel_settings.channel_row.configure"
                  values={Object {}}
                />
              </Link>
            </span>,
            "id": "id4",
            "management": <span
              className="group-description adjusted row-content"
            >
              <FormattedMessage
                defaultMessage="Manual Invites"
                id="admin.channel_settings.channel_row.managementMethod.manual"
                values={Object {}}
              />
            </span>,
            "name": <span
              className="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <GlobeIcon
                className="channel-icon"
              />
              <span
                className="TeamList_channelDisplayName"
              >
                DN4
              </span>
            </span>,
            "team": <span
              className="group-description row-content"
            >
              teamDisplayName
            </span>,
          },
          "onClick": [Function],
        },
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editRow"
              data-testid="DN5edit"
            >
              <Link
                to="/admin_console/user_management/channels/id5"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.channel_settings.channel_row.configure"
                  values={Object {}}
                />
              </Link>
            </span>,
            "id": "id5",
            "management": <span
              className="group-description adjusted row-content"
            >
              <FormattedMessage
                defaultMessage="Manual Invites"
                id="admin.channel_settings.channel_row.managementMethod.manual"
                values={Object {}}
              />
            </span>,
            "name": <span
              className="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <GlobeIcon
                className="channel-icon"
              />
              <span
                className="TeamList_channelDisplayName"
              >
                DN5
              </span>
            </span>,
            "team": <span
              className="group-description row-content"
            >
              teamDisplayName
            </span>,
          },
          "onClick": [Function],
        },
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editRow"
              data-testid="DN6edit"
            >
              <Link
                to="/admin_console/user_management/channels/id6"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.channel_settings.channel_row.configure"
                  values={Object {}}
                />
              </Link>
            </span>,
            "id": "id6",
            "management": <span
              className="group-description adjusted row-content"
            >
              <FormattedMessage
                defaultMessage="Manual Invites"
                id="admin.channel_settings.channel_row.managementMethod.manual"
                values={Object {}}
              />
            </span>,
            "name": <span
              className="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <GlobeIcon
                className="channel-icon"
              />
              <span
                className="TeamList_channelDisplayName"
              >
                DN6
              </span>
            </span>,
            "team": <span
              className="group-description row-content"
            >
              teamDisplayName
            </span>,
          },
          "onClick": [Function],
        },
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editRow"
              data-testid="DN7edit"
            >
              <Link
                to="/admin_console/user_management/channels/id7"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.channel_settings.channel_row.configure"
                  values={Object {}}
                />
              </Link>
            </span>,
            "id": "id7",
            "management": <span
              className="group-description adjusted row-content"
            >
              <FormattedMessage
                defaultMessage="Manual Invites"
                id="admin.channel_settings.channel_row.managementMethod.manual"
                values={Object {}}
              />
            </span>,
            "name": <span
              className="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <GlobeIcon
                className="channel-icon"
              />
              <span
                className="TeamList_channelDisplayName"
              >
                DN7
              </span>
            </span>,
            "team": <span
              className="group-description row-content"
            >
              teamDisplayName
            </span>,
          },
          "onClick": [Function],
        },
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editRow"
              data-testid="DN8edit"
            >
              <Link
                to="/admin_console/user_management/channels/id8"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.channel_settings.channel_row.configure"
                  values={Object {}}
                />
              </Link>
            </span>,
            "id": "id8",
            "management": <span
              className="group-description adjusted row-content"
            >
              <FormattedMessage
                defaultMessage="Manual Invites"
                id="admin.channel_settings.channel_row.managementMethod.manual"
                values={Object {}}
              />
            </span>,
            "name": <span
              className="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <GlobeIcon
                className="channel-icon"
              />
              <span
                className="TeamList_channelDisplayName"
              >
                DN8
              </span>
            </span>,
            "team": <span
              className="group-description row-content"
            >
              teamDisplayName
            </span>,
          },
          "onClick": [Function],
        },
        Object {
          "cells": Object {
            "edit": <span
              className="group-actions TeamList_editRow"
              data-testid="DN9edit"
            >
              <Link
                to="/admin_console/user_management/channels/id9"
              >
                <FormattedMessage
                  defaultMessage="Edit"
                  id="admin.channel_settings.channel_row.configure"
                  values={Object {}}
                />
              </Link>
            </span>,
            "id": "id9",
            "management": <span
              className="group-description adjusted row-content"
            >
              <FormattedMessage
                defaultMessage="Manual Invites"
                id="admin.channel_settings.channel_row.managementMethod.manual"
                values={Object {}}
              />
            </span>,
            "name": <span
              className="group-name overflow--ellipsis row-content"
              data-testid="channel-display-name"
            >
              <GlobeIcon
                className="channel-icon"
              />
              <span
                className="TeamList_channelDisplayName"
              >
                DN9
              </span>
            </span>,
            "team": <span
              className="group-description row-content"
            >
              teamDisplayName
            </span>,
          },
          "onClick": [Function],
        },
      ]
    }
    rowsContainerStyles={
      Object {
        "minHeight": "400px",
      }
    }
    search={[Function]}
    startCount={1}
    term=""
    total={30}
  />
</div>
`;
